--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,11 +3,16 @@
     <a href="http://railstutorial.org/">Rails Tutorial</a>
     by Michael Hartl
   </small>
+  <p>
+    <small>
+     Edited by Patrick Guthauser
+    </small>
+  </p>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="https://patrickssampleapprails.herokuapp.com/">News</a></li>
     </ul>
   </nav>
 </footer>
