--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
+  To know more about the sample app of the Ruby on Rails Tutorial you can visit the 
+  <a href="http://railstutorial.org/contact">contact page</a> of the tutorial.
+  To contact me you can post me a message on the site itself (Patrick Guthauser).
 </p>
