--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,11 +3,10 @@
     <a href="http://railstutorial.org/">Rails Tutorial</a>
     by Michael Hartl
   </small>
-  <p>
+  <br />
     <small>
-     Edited by Patrick Guthauser
+     Edited by <a href="users/1"> Patrick Guthauser </a>
     </small>
-  </p>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
