--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,5 +3,5 @@
 <p>
   To know more about the sample app of the Ruby on Rails Tutorial you can visit the 
   <a href="http://railstutorial.org/contact">contact page</a> of the tutorial.
-  To contact me you can post me a message on the site itself (Patrick Guthauser).
+  To contact me you can post me a message on the site itself (<a href="users/1"> Patrick Guthauser </a>).
 </p>
