--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -3,5 +3,5 @@
 <p>
   Get help on the Ruby on Rails Tutorial at the
   <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-  To get individual help you can contact me on the site itself (Patrick Guthauser).
+  To get individual help you can contact me on the site itself (<a href="users/1"> Patrick Guthauser </a>).
 </p>
